--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,7 @@
 version: '3'
 services:
-  hk-mysql:
-    container_name: hk-mysql
-    image: mysql/mysql-server:5.7
-    environment:
-      MYSQL_DATABASE: test
-      MYSQL_ROOT_PASSWORD: hellokoding
-      MYSQL_ROOT_HOST: '%'
-    ports:
-    - "3306:3306"
-    restart: always
 
-  crud-mysql-vuejs:
+  ui-vuejs:
     build: .
     volumes:
     ## Mount or copy (see Dockerfile)
@@ -21,5 +11,3 @@ services:
     ports:
     - 8080:8080
     command: mvn clean spring-boot:run
-    depends_on:
-    - hk-mysql
